# PKMUON_2024

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Cry.mac  CryMu.mac  CryMuCamera.mac  CryMuGps.mac  README.md  RELEASE  SingleEngMu.mac  layout_al.sh  layout_default.sh  layout_glass.sh  layout_pb.sh  layout_pb_minor.sh  layout_pb_minor_down.sh  lxlogin_run.sh  lxlogin_submit.sh  lxlogin_supply.sh  movie.mac  muPos.cc  run.sh  run_cry.sh  vis.mac
DM_step1/: README.md
DM_step2/: README.md
analysis/: analysis.sh
analysis/src/: PoCA_sim.C  PoCA_sim.c  analysis.C  analysis.cc  draw.c  draw_diff.C  draw_momentum.C  draw_sim.C  draw_sim.c  new_Simdata.root  sim_exp_compare.c
config/: layout.yaml  layout_al.yaml  layout_glass.yaml  layout_pb.yaml  layout_pb_minor.yaml  layout_pb_minor_down.yaml  newlayout.yaml  newrpc.yaml  newrpc_readout.yaml  rpc.yaml  rpc_material.yaml  rpc_readout.yaml  schema.yaml  volume_schema.yaml
include/: ActionInitialization.hh  Camera.hh  CameraMessenger.hh  DetectorConstruction.hh  EdepData.hh  EventAction.hh  GeometryConfig.hh  GetSeedFromTime.hh  GpsPrimaryGeneratorAction.hh  Object.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RNGWrapper.hh  Run.hh  RunAction.hh  RunMessenger.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh
spec/: RPC尺寸.pptx  jw-box.rar  rpc各层成分.xlsx  spec.txt
src/: ActionInitialization.cc  Camera.cc  CameraMessenger.cc  DetectorConstruction.cc  EventAction.cc  GeometryConfig.cc  GpsPrimaryGeneratorAction.cc  Object.cc  ObjectLinkDef.h  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RNGWrapper.cc  Run.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc
